--- a/templates/digipolis_7_0.hbs
+++ b/templates/digipolis_7_0.hbs
@@ -54,7 +54,7 @@ paths: {}
       description: 'Retrieve a paged result list of {{#if parent }}`{{collection}}` for a certain `{{parent.name}}`{{else}}`{{collection}}`{{/if}}.'
       parameters:
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
         - in: query
           name: refnumber
@@ -65,6 +65,8 @@ paths: {}
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/pagesize'
         - $ref: '#/components/parameters/pagingStrategy'
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       responses:
         '200':
           description: OK
@@ -81,10 +83,12 @@ paths: {}
     post:
       summary: Add a new {{name}} to the {{collection}} collection.
       description: 'Add a new `{{name}}` resource to the `{{collection}}` collection{{#if parent }} of the given `{{parent.name}}`{{/if}}.'
-      {{#if parent }}
       parameters:
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+      {{#if parent }}
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
       {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       requestBody:
         required: true
         content:
@@ -125,10 +129,12 @@ paths: {}
       summary: Retrieve one {{name}}
       description: 'Retrieve exactly one `{{name}}` for the given id in the path.'
       parameters:
-        - $ref: '#/components/parameters/{{idParameter}}'
+        - $ref: '#/components/parameters/{{idParameter}}Param'
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       responses:
         '200':
           description: OK
@@ -160,10 +166,12 @@ paths: {}
       summary: Check if the {{name}} exist
       description: 'Check if the `{{name}}` with the given id exists.'
       parameters:
-        - $ref: '#/components/parameters/{{idParameter}}'
+        - $ref: '#/components/parameters/{{idParameter}}Param'
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       responses:
         '200':
           description: '`{{name}}` exist.'
@@ -191,10 +199,12 @@ paths: {}
       summary: Replace the {{name}} with the one given here
       description: 'Replace the complete `{{name}}` resource with the one provided in the payload. If {{name}} does not exist a 404 will be returned.'
       parameters:
-        - $ref: '#/components/parameters/{{idParameter}}'
+        - $ref: '#/components/parameters/{{idParameter}}Param'
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       requestBody:
         required: true
         content:
@@ -239,10 +249,12 @@ paths: {}
       summary: Update a {{name}}
       description: 'With this operation you can update parts of the `{{name}}` for the given id.'
       parameters:
-        - $ref: '#/components/parameters/{{idParameter}}'
+        - $ref: '#/components/parameters/{{idParameter}}Param'
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       requestBody:
         required: true
         content:
@@ -282,10 +294,12 @@ paths: {}
       summary: Delete a {{name}}
       description: 'Remove the `{{name}}` with the given id.'
       parameters:
-        - $ref: '#/components/parameters/{{idParameter}}'
+        - $ref: '#/components/parameters/{{idParameter}}Param'
         {{#if parent }}
-        - $ref: '#/components/parameters/{{parent.idParameter}}'
+        - $ref: '#/components/parameters/{{parent.idParameter}}Param'
         {{/if}}
+        - $ref: '#/components/parameters/correlationParam'
+        - $ref: '#/components/parameters/tenantIdParam'
       responses:
         '204':
           description: '`{{name}}` removed'
@@ -319,15 +333,26 @@ paths: {}
 {{/if}}
 components:
   parameters:
-    tenantParam:
+    tenantIdParam:
       name: dgp-tenant-id
-      description: the identification of the tenant you want to use
+      description: The id of the tenant you want to use for this operation, more info [here](https://opdrachten.digipolis.be/nl/multitenancy-requirements)
       in: header
       required: true
       schema:
         type: string
+        format: uuid
+      example: '5ba786ad-bd58-4672-81b6-99d710226485'
+    correlationParam:
+      name: dgp-correlation
+      description: Passes logging information through the call chain of your distributed system, more info [here](https://github.com/digipolisantwerpdocumentation/api-design-and-patterns/blob/master/patterns/correlation.md)
+      in: header
+      required: true
+      schema:
+        type: string
+        format: byte
+      example: 'eyAiaWQiOiAiYjg2MjVjIiwgInNvdXJjZSI6ICJhcHBOYW1lIiwgInVzZXJJZCI6ICJ1c2VyaWQiLCAiaXBBZGRyZXNzIjogIjE5NC4yNS43Ni4xMjIiIH0='
 {{#each resources}}
-    {{idParameter}}:
+    {{idParameter}}Param:
       name: {{idParameter}}
       in: path
       description: >-
