fixed version string issue

--- a/templates/basic.hbs
+++ b/templates/basic.hbs
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  version: {{version}}
+  version: '{{version}}'
   title: {{capitalize name}} API
   description: Your shiny new OAS Document for your {{capitalize name}} API
   contact:
