--- a/templates/minimal.hbs
+++ b/templates/minimal.hbs
@@ -6,7 +6,7 @@ info:
   contact:
     name: John Doe
     email: john.doe@gmail.com
-    url: https://www.johndoe.com
+    url: https://www.johndoe.io
   license:
     name: MIT license
     url: https://opensource.org/licenses/MIT
