--- a/templates/digipolis_7_0.hbs
+++ b/templates/digipolis_7_0.hbs
@@ -50,7 +50,7 @@ paths: {}
   {{#if collectionPath~}}'{{~collectionPath~}}':{{~/if}}
     {{#if ops.hasList}}
     get:
-      summary: Retrieve a list of {{#if parent }}{{collection}} for a certain {{parent.name}}{{else}}{{collection}}{{/if}}
+      summary: Retrieve {{collection}}
       description: 'Retrieve a paged result list of {{#if parent }}`{{collection}}` for a certain `{{parent.name}}`{{else}}`{{collection}}`{{/if}}.'
       parameters:
         {{#if parent }}
@@ -81,7 +81,7 @@ paths: {}
     {{/if}}
     {{#if ops.hasPost}}
     post:
-      summary: Add a new {{name}} to the {{collection}} collection.
+      summary: Create {{name}} 
       description: 'Add a new `{{name}}` resource to the `{{collection}}` collection{{#if parent }} of the given `{{parent.name}}`{{/if}}.'
       parameters:
       {{#if parent }}
@@ -126,7 +126,7 @@ paths: {}
   {{#if resourcePath ~}}'{{~resourcePath~}}':{{~/if}}
     {{#if ops.hasGet}}
     get:
-      summary: Retrieve one {{name}}
+      summary: Retrieve {{name}}
       description: 'Retrieve exactly one `{{name}}` for the given id in the path.'
       parameters:
         - $ref: '#/components/parameters/{{idParameter.name}}'
@@ -196,7 +196,7 @@ paths: {}
     {{/if}}
     {{#if ops.hasPut}}
     put:
-      summary: Replace the {{name}} with the one given here
+      summary: Replace {{name}}
       description: 'Replace the complete `{{name}}` resource with the one provided in the payload. If {{name}} does not exist a 404 will be returned.'
       parameters:
         - $ref: '#/components/parameters/{{idParameter.name}}'
@@ -246,7 +246,7 @@ paths: {}
     {{/if}}
     {{#if ops.hasPatch}}
     patch:
-      summary: Update a {{name}}
+      summary: Update {{name}}
       description: 'With this operation you can update parts of the `{{name}}` for the given id.'
       parameters:
         - $ref: '#/components/parameters/{{idParameter.name}}'
@@ -291,7 +291,7 @@ paths: {}
     {{/if}}
     {{#if ops.hasDelete}}
     delete:
-      summary: Delete a {{name}}
+      summary: Delete {{name}}
       description: 'Remove the `{{name}}` with the given id.'
       parameters:
         - $ref: '#/components/parameters/{{idParameter.name}}'
