--- a/templates/basic.hbs
+++ b/templates/basic.hbs
@@ -1,3 +1,7 @@
+{{!-- {{
+  This template is a fairly basic implementation of a REST API. it is innspired by the API guidelines from Antwerp (https://antwerp-api.digipolis.be/#/content/common/swagger-docs)
+  Note that the async post operation is not yet supported in this template. 
+}} --}}
 openapi: 3.0.3
 info:
   version: '{{version}}'
