--- a/templates/digipolis_7_0.hbs
+++ b/templates/digipolis_7_0.hbs
@@ -1,3 +1,6 @@
+{{!-- {{
+  This template is specifically designed for Digipolis Antwerp. 
+}} --}}
 openapi: 3.0.3
 info:
   version: '{{version}}'
@@ -6,7 +9,7 @@ info:
     This {{name}} API is generated based on the specifications of the [Digipolis API System 7.0](https://antwerp-api.digipolis.be/).
     
 
-    Here are some tips **you can do next:** 
+    **What's next:** 
 
       - Check if all resources (like {{capitalize resources.0.name}}) require all operations that were generated, some parts of the API may be readOnly so remove the operations not needed
       - The schema (or models) of all resources are examples here, be sure to adjust them to your case at hand
