--- a/templates/minimal.hbs
+++ b/templates/minimal.hbs
@@ -1,3 +1,6 @@
+{{!-- {{
+  This template is a good starting point if you like to go from scratch. 
+}} --}}
 openapi: 3.0.3
 info:
   version: '{{version}}'
